fixes menu box behind navbar

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ li {
   padding: 1rem;
   transition: ease-in-out 0.5s;
   right: -70vw;
+  z-index: 1001;
 }
 
 .menu-link {
@@ -158,7 +159,7 @@ nav {
 
 #hamburger {
   color: var(--light-secondary);
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 /* ------ STACKED SELECTORS ------ */
